# MetroEyes

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  cloudflared-config.example.yml  cloudflared-config.yml  debug.bat  docker-compose.yml  environment.yml  index.html  logs.bat  ngrok_policy.yml  privacy.html  pyproject.toml  requirements.txt  start.bat  start_demo.bat  start_silent.vbs  start_tunnel.bat  status.bat  status_silent.vbs  stop.bat  stop_demo.bat  stop_silent.vbs  watch.bat
.github/: PULL_REQUEST_TEMPLATE.md
configs/: default.yaml  homography_vtest.json
docs/: ARCHITECTURE_VIEW.html  FORM_DATA.md  INNOVATION_TRIZ.md  PROPOSAL.md  QA_PREPARATION.md  RECORDING_GUIDE.md  RECORDING_NARRATION.md  RUN.md  RUNBOOK.md  SLIDES.html  SLIDES_DECK.md  SUBMISSION_GUIDE.md  SUBMISSION_INDEX.md  openapi.yaml  proposal_deck.html
frontend/: admin.html  demo.html  index.html  onepager.html  pitch.html
mobile_app/: README.md  pubspec.yaml
notebooks/: 01_eda_subway.py
scripts/: _fix_fonts.py  _fix_parens.py  _polish_ui.py  _strip_cycle.py  capture_citizen_screens.py  capture_demo.py  cloudflared_watchdog.ps1  cluster_stations.py  co2_correlation.py  dday.ps1  dday.sh  demo_crowd.py  eda_air_subway_corr.py  eda_boarding_efficiency.py  eda_carload_v2.py  eda_carload_v3_real.py  eda_co2_savings.py  eda_dispersion_sim.py  eda_line_carload.py  eda_line_hour_priority.py  eda_line_priority_roi.py  eda_od_asymmetry.py  eda_priority_stations.py  eda_quick.py  eda_station_density.py  (+27 more)
(+149 files in other folders)
